[tool.poetry]
name = "photo20"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
django-cors-headers = "^3.2"
djangorestframework = "^3.10"
exifread = "^2.1"
pillow = "^6.2"
sentry_sdk = "^0.13.2"
python-xmp-toolkit = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
